--- a/templates/index.html
+++ b/templates/index.html
@@ -10,24 +10,23 @@
         <style>
 
         </style>
-        <script>
-            $(document).ready(function (){
-                showStory();
-            });
+<!--        <script>-->
+<!--            $(document).ready(function (){-->
+<!--                showStory();-->
+<!--            });-->
 
-            function showStory(){
-                $.ajax({
-                    type: 'GET',
-                    url: 'api/show_story',
-                    data: {},
-                    success: function 
-                })
-            }
-        </script>
+<!--            // function showStory(){-->
+<!--            //     $.ajax({-->
+<!--            //         type: 'GET',-->
+<!--            //         url: 'api/show_story',-->
+<!--            //         data: {},-->
+<!--            //         success: function-->
+<!--                })-->
+<!--            }-->
+<!--        </script>-->
     </head>
     <body>
-
-
+        hello world
         
     </body>
 </html>
