--- a/templates/index.html
+++ b/templates/index.html
@@ -3,30 +3,70 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Vovel! | 오디오 기반 채팅형 소설플랫폼! </title>
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+              crossorigin="anonymous">
+
+        <!-- JS -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"/>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+                integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+                crossorigin="anonymous"></script>
+
+        <!-- 구글폰트 -->
+        <link href="https://fonts.googleapis.com/css?family=Do+Hyeon&display=swap" rel="stylesheet">
+
+        <title>Vovel! | 오디오 기반 채팅형 소설플랫폼! </title>
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
         <style>
+            * {
+                font-family: 'Stylish', sans-serif;
+            }
+
+            .wrap {
+                width: 900px;
+                margin:auto;
+            }
+
+            .center {
+                text-align: center;
+            }
 
         </style>
-<!--        <script>-->
-<!--            $(document).ready(function (){-->
-<!--                showStory();-->
-<!--            });-->
+        <script type="text/javascript">
+            $(document).ready(function (){
+                showStory();
+            });
 
-<!--            // function showStory(){-->
-<!--            //     $.ajax({-->
-<!--            //         type: 'GET',-->
-<!--            //         url: 'api/show_story',-->
-<!--            //         data: {},-->
-<!--            //         success: function-->
-<!--                })-->
-<!--            }-->
-<!--        </script>-->
+            function showStory() {
+                $('#story-box').empty()
+
+                $.ajax({
+                    type: "GET",
+                    url: "/api/show",
+                    data: {},
+
+                    success: function (response) {
+                        if (response["result"] == "success") {
+                            let story = response["storylines"];
+                            for (let i = 0; i < storylines.length; i++) {
+                                print(story[i]["storylines"])
+                            }
+                        } else {
+                            alert("이야기를 받아오지 못했습니다");
+                        }
+                    }
+
+                })
+            }
+
+        </script>
     </head>
     <body>
-        hello world
+        <H2>Vovel</H2>
+
         
     </body>
 </html>
